# McRealTimeRenderFace

./: .gitignore  CMakeLists.txt  Project.cbp  README.MD  renderer.cbp  renderer_tests
renderer_tests.dSYM/Contents/: Info.plist
src/: SDLauxiliary.cpp  SDLauxiliary.h  common.h  main.cpp
src/rendering/: AOFragmentShader.cpp  AOFragmentShader.hpp  AntiAliasingPostProcessing.cpp  AntiAliasingPostProcessing.hpp  BasicFragmentShader.hpp  BasicVertexShader.hpp  DeferredRenderingBuffers.cpp  DeferredRenderingBuffers.hpp  DeferredRenderingPipeline.cpp  DeferredRenderingPipeline.hpp  Fragment.hpp  FragmentShader.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GeometryPassFragmentShader.cpp  GeometryPassFragmentShader.hpp  LightingPassFragmentShader.cpp  LightingPassFragmentShader.hpp  PhysicallyBasedFragmentShader.cpp  PhysicallyBasedFragmentShader.hpp  PrimitivePreprocessor.cpp  PrimitivePreprocessor.hpp  Rasterizer.cpp  Rasterizer.hpp  RasterizerConfig.hpp  RayTracer.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  RenderingPipeline.cpp  RenderingPipeline.hpp  ShaderEnvironment.hpp  VertexShader.cpp  VertexShader.hpp
src/scene/: BoundingBox.hpp  Camera.cpp  Camera.hpp  ColourSampler.cpp  ColourSampler.hpp  CubeMapSampler.cpp  CubeMapSampler.hpp  Light.hpp  Line.cpp  Line.hpp  MaterialSpec.cpp  MaterialSpec.hpp  Mesh.hpp  Plane.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  SphericalMapSampler.cpp  SphericalMapSampler.hpp  TestModelH.h  TextureSampler2D.cpp  TextureSampler2D.hpp  Transform.cpp  Transform.hpp  Triangle.cpp  Triangle.hpp  Vertex.hpp  Viewport.cpp  Viewport.hpp
src/shader/: Microfacet.hpp
src/textures/: Texture2D.cpp  Texture2D.hpp
tests/: catch.hpp
textures/: New_Graph.sbs
